--- a/style/style.css
+++ b/style/style.css
@@ -1,65 +1,61 @@
 body{
-    background: url('../image/4.jpg');
-    background-position-y: -80 ;
-    background-size: cover;
-   }
-   #wrapper{
-      
-       justify-content: center;
-       display: flex;
-   
-       min-height: 100vh;
-       align-items: center;
-   }
-   #form-login{
-       max-width: 400px;
-       background: rgba(0, 0, 0, 0.8);
-       flex-grow: 1;
-       padding: 30px  30px 40px;
-       box-shadow:0px 0px 17px 2px rgba(46, 43, 43, 0.8);
-      
-   
-   
-   }
-   .form-heading{
-       font-size: 25px;
-       color: #f5f5f5f5;
-       text-align: center;
-       margin-bottom: 30px;
-   }
-   .form-group{
-     border-top: 1px solid #fff;
-   
-       margin-top: 15px;
-       margin-bottom: 20px;
-       
-   
-   }
-   .form-input{
-       background: transparent;
-       border: 0;
-       outline: 0;
-    color: #f5f5f5f5;
-    flex-grow: 1;
-       
-   }
-   .form-input::placeholder{
-       color: #f5f5f5f5;
-   }
-   .form-submit{
-       background: transparent;
-       border: 1px solid #fff;
-       color: #fff;
-       width: 100%;
-       padding: 6px 10px;
-       margin: 5px;
-   }
-   .form-submit:hover{
-       border: 1px solid yellow;
-   }
-   .form-group i{
-       color: #fff;
-       padding: 2px;
-       margin: 5px;
-       text-align: left;
-   }
+    margin: 0;
+    background-color: #f9f9f9;
+}
+ *{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+ }
+ header{
+    padding: 20px 0px;
+    background-color: #18a065;
+    display: flex;
+ }
+ .img-container{
+    background-color: white;
+    padding-left: 30px;
+    padding: 8px;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+
+ }
+ .title-container{
+    padding: 0px 20px ;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+ }
+ .title-container h2, .title-container h3{
+    color: white;
+    font-size: 28px;
+    text-transform: uppercase;
+
+
+ }
+ .title-container h3{
+    font-size: 20px;
+    font-weight: 500;
+    color: #e0e0e0;
+ }
+ .img, .avatar{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 100px;
+ }
+ .container{
+    padding: 20px;
+    background-color: #f9f9f9;
+    display: flex;
+ }
+ .sider, content{
+    background-color: white;
+
+ }
+ .sider{
+    width: calc(40%-20px);
+    margin-right: 20px;
+ }
+ .content{
+    flex-grow: 1px;
+ }
